# juce-plugin-template

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: AlternateSet.hh.93FD6D2157CF34AD.idx  AlternateSubst.hh.A2AAC91ACAA0F090.idx  AlternateSubstFormat1.hh.AE1A318F95D47E24.idx  Anchor.hh.EB33235C43FD566E.idx  AnchorFormat1.hh.B518C83C916D8110.idx  AnchorFormat2.hh.06473EEA022406C1.idx  AnchorFormat3.hh.6FE2840D30205DA0.idx  AnchorMatrix.hh.2A95D122808D84D1.idx  BidiChain.c.F0D5657D20A7517B.idx  BidiChain.h.1F1AE1533DE55085.idx  BidiTypeLookup.c.6B428566D2DD7112.idx  BidiTypeLookup.h.7F09CC9D9F783BDA.idx  BracketQueue.c.C0CA8E149EA75E1B.idx  BracketQueue.h.E326C422A42ED077.idx  BracketType.h.5B4692E74491AB9F.idx  CBDT.hh.739C7E740425F607.idx  COLR.hh.7DF7FB3AEA06B043.idx  CPAL.hh.687C70C988A3E466.idx  ChainContextPos.hh.9FEE7701DB62D43A.idx  ChainContextSubst.hh.ACC927B44CFEA817.idx  Common.hh.C796CF1EF4D2F283.idx  Common.hh.ECBDCB0E7F67BBDA.idx  CompositeGlyph.hh.E786854FF7BAD99F.idx  ContextPos.hh.C59E641A42816815.idx  ContextSubst.hh.0A8D2B018F609D03.idx  Coverage.hh.B064AF40F7ED6FD6.idx  CoverageFormat1.hh.C56A5AEAE2532797.idx  CoverageFormat2.hh.EBC158C2B8EB10B9.idx  CursivePos.hh.034DC1646CC3F072.idx  CursivePosFormat1.hh.F89D0AD088101064.idx  ExtensionPos.hh.540E90DA078182FC.idx  ExtensionSubst.hh.609A67CE815C082C.idx  GDEF.hh.AA9EF2C1D65740DE.idx  GPOS.hh.5F489FF2F886D600.idx  GSUB.hh.21561980A6F12E59.idx  (+1780 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: brief.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  glibc_compat.cpp
web/: index.html
(+8 files in other folders)
